--- a/src/main/plugin/iso19139.sinp/layout/config-editor.xml
+++ b/src/main/plugin/iso19139.sinp/layout/config-editor.xml
@@ -562,7 +562,8 @@
 
           <field xpath="/gmd:MD_Metadata/gmd:identificationInfo/*/gmd:descriptiveKeywords[
                             */gmd:thesaurusName/*/gmd:identifier/*/gmd:code/* = 'geonetwork.thesaurus.external.theme.sinp-type-de-donnees']"/>
-          <field xpath="/gmd:MD_Metadata/gmd:identificationInfo/*/gmd:citation/*/gmd:identifier/*/gmd:code"/>
+          <field xpath="/gmd:MD_Metadata/gmd:identificationInfo/*/gmd:citation/*/gmd:identifier/*/gmd:code"
+                 del="../.."/>
           <!-- TODO : groupe écologique -->
 
           <field xpath="/gmd:MD_Metadata/gmd:identificationInfo/*/gmd:descriptiveKeywords[
